<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <ImageView
            android:id="@+id/imageViewBigPoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/big_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraint"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageViewAddToFavourite"
            android:layout_width="@dimen/starAddToFavouriteSize"
            android:layout_height="@dimen/starAddToFavouriteSize"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="onClickChangeFavourite"
            android:src="@drawable/add_to_favourite"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBigPoster"
            app:layout_constraintEnd_toEndOf="@+id/imageViewBigPoster"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBigPoster" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/tw_title"
            android:textColor="@color/colorPink"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/view1"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewAddToFavourite" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorGray"
            app:layout_constraintBottom_toTopOf="@id/textViewOriginalName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewNameDesc" />


        <TextView
            android:id="@+id/textViewNameDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/view1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/imageViewAddToFavourite" />

        <TextView
            android:id="@+id/textViewOriginalName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="2dp"
            android:text="@string/tw_originalTitle"
            android:textColor="@color/colorPink"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/view2"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorGray"
            app:layout_constraintBottom_toTopOf="@id/textViewVoteAverage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewOriginalNameDesc" />

        <TextView
            android:id="@+id/textViewOriginalNameDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"

            app:layout_constraintBottom_toTopOf="@id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <TextView
            android:id="@+id/textViewVoteAverage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"

            android:text="@string/twVoteAverage"
            android:textColor="@color/colorPink"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/view3"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorGray"
            app:layout_constraintBottom_toTopOf="@id/textViewOverView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewVoteAverageDesc" />


        <TextView
            android:id="@+id/textViewVoteAverageDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/view3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/textViewOverView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/twOverView"
            android:textColor="@color/colorPink"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/textViewOverviewDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOverView" />

        <View
            android:id="@+id/viewUprTwTrailers"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorGray"
            app:layout_constraintTop_toBottomOf="@id/textViewOverviewDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/textViewTrailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/text_trailers"
            android:textColor="@color/colorPink"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewUprTwTrailers"
            app:layout_constraintBottom_toTopOf="@id/recyclerTrailers"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTrailers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTrailers">


        </androidx.recyclerview.widget.RecyclerView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerReviews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerTrailers">


        </androidx.recyclerview.widget.RecyclerView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>